--- a/custom.css
+++ b/custom.css
@@ -71,6 +71,7 @@ a {
   height: 100px;
   float: left;
   border: 3px solid #607D8B;
+  content:url(https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAfoAAAAJDc4Y2YxYmI0LTNhMDYtNDUyZS05Y2M5LWM3MGM0ZTQ5MWYwYw.jpg);
   background: #607D8B;
   background-size: cover;
   border-radius: 50%;
